--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
-  <h1><a href="/">Dattilosauro</a></h1>
+  <h1><a href="#">Dattilosauro</a></h1>
     <div id="container">
     </div>
   </body>
