welcome page layout and partial work on backspace key

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
         text-align: center;
         padding: 40px 15px;
       }
+      .excerpt-list {
+        width: 540px;
+        margin: auto;
+      }
+      .typingtext {
+        text-align: left;
+      }
     </style>
   </head>
   <body style>
